--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 </div>
 
 <section id="hero" class="relative min-h-screen overflow-hidden">
-    <!-- Video Background with GitHub Raw Content -->
+    <!-- Video Background -->
     <div class="absolute inset-0 w-full h-full">
         <!-- Primary Video Element -->
         <video 
@@ -481,15 +481,15 @@
             muted 
             loop 
             playsinline 
+            webkit-playsinline
             preload="auto"
             poster="https://storage.googleapis.com/uxpilot-auth.appspot.com/4956c3b6e4-3d53a61de0b0cf080ceb.png">
-            <!-- Primary source: GitHub raw content -->
-            <source src="https://raw.githubusercontent.com/bjcwheller-coder/Websies-website/master/hero-background.mp4" type="video/mp4">
-            <!-- Secondary source: Alternative GitHub raw link -->
-            <source src="https://github.com/bjcwheller-coder/Websies-website/raw/master/hero-background.mp4" type="video/mp4">
-            <!-- Local file fallback -->
+            <!-- Direct path to video in repository -->
             <source src="hero-background.mp4" type="video/mp4">
-            <source src="./hero-background.mp4" type="video/mp4">
+            <!-- GitHub raw content URLs as fallback -->
+            <source src="https://raw.githubusercontent.com/websies-melwin/websies-new-website/master/hero-background.mp4" type="video/mp4">
+            <source src="https://raw.githubusercontent.com/bjcwheller-coder/Websies-website/master/hero-background.mp4" type="video/mp4">
+            Your browser does not support the video tag.
         </video>
         
         <!-- Fallback Background Image (shows if video fails) -->
