--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script> window.FontAwesomeConfig = { autoReplaceSvg: 'nest'};</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="auth.js"></script>
+    <link rel="stylesheet" href="responsive-enhance.css">
     
     <script>
         // Video fallback handler
