Fix website - remove broken CSS and add simple hero padding fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script> window.FontAwesomeConfig = { autoReplaceSvg: 'nest'};</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="auth.js"></script>
-    <link rel="stylesheet" href="responsive-enhance.css">
     
     <script>
         // Video fallback handler
@@ -471,7 +470,7 @@
     </div>
 </div>
 
-<section id="hero" class="relative min-h-screen overflow-hidden">
+<section id="hero" class="relative min-h-screen overflow-hidden" style="padding-top: 80px;">
     <!-- Video Background -->
     <div class="absolute inset-0 w-full h-full">
         <!-- Primary Video Element -->
