Fix pricing page header spacing to match home page

--- a/pricing.html
+++ b/pricing.html
@@ -427,7 +427,7 @@
 </div>
 
 <!-- Hero Section (Unique for pricing page) -->
-<section class="relative pt-32 pb-20 overflow-hidden">
+<section class="relative pb-20 overflow-hidden" style="padding-top: 80px;">
     <!-- Background decoration -->
     <div class="absolute inset-0 opacity-20">
         <div class="absolute top-20 left-10 w-72 h-72 bg-[var(--accent-cyan)] rounded-full filter blur-[128px]"></div>
