--- a/pricing.html
+++ b/pricing.html
@@ -346,30 +346,30 @@
         <div class="absolute bottom-20 right-10 w-96 h-96 bg-[var(--accent-blue)] rounded-full filter blur-[128px]"></div>
     </div>
     
-    <div class="container mx-auto px-6 relative z-10">
-        <div class="text-center max-w-3xl mx-auto mb-16">
-            <h1 class="text-5xl lg:text-6xl font-montserrat font-bold text-white mb-6">
+    <div class="container mx-auto px-4 sm:px-6 relative z-10">
+        <div class="text-center max-w-4xl mx-auto mb-16">
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-montserrat font-bold text-white mb-6 leading-tight">
                 Simple, <span class="text-gradient">Transparent</span> Pricing
             </h1>
-            <p class="text-xl text-[var(--text-secondary)] mb-8">
+            <p class="text-lg md:text-xl text-[var(--text-secondary)] mb-12">
                 No hidden fees. No contracts. Cancel anytime.
             </p>
-            <div class="flex flex-wrap justify-center gap-8 text-center">
+            <div class="flex flex-wrap justify-center gap-12 text-center">
                 <div class="flex flex-col">
-                    <span class="text-3xl font-bold text-white">7</span>
-                    <span class="text-sm text-[var(--text-muted)]">Day Delivery</span>
+                    <span class="text-4xl md:text-5xl font-bold text-white">7</span>
+                    <span class="text-base md:text-lg text-[var(--text-muted)]">Day Delivery</span>
                 </div>
                 <div class="flex flex-col">
-                    <span class="text-3xl font-bold text-white">£47</span>
-                    <span class="text-sm text-[var(--text-muted)]">/month</span>
+                    <span class="text-4xl md:text-5xl font-bold text-white">£47</span>
+                    <span class="text-base md:text-lg text-[var(--text-muted)]">/month</span>
                 </div>
                 <div class="flex flex-col">
-                    <span class="text-3xl font-bold text-white">£0</span>
-                    <span class="text-sm text-[var(--text-muted)]">Upfront</span>
+                    <span class="text-4xl md:text-5xl font-bold text-white">£0</span>
+                    <span class="text-base md:text-lg text-[var(--text-muted)]">Upfront</span>
                 </div>
                 <div class="flex flex-col">
-                    <span class="text-3xl font-bold text-white">100%</span>
-                    <span class="text-sm text-[var(--text-muted)]">Custom</span>
+                    <span class="text-4xl md:text-5xl font-bold text-white">100%</span>
+                    <span class="text-base md:text-lg text-[var(--text-muted)]">Custom</span>
                 </div>
             </div>
         </div>
@@ -377,8 +377,8 @@
 </section>
 
 <!-- Pricing Cards Section -->
-<section class="py-20 relative">
-    <div class="container mx-auto px-6">
+<section class="py-16 md:py-24 relative">
+    <div class="container mx-auto px-4 sm:px-6">
         <div class="grid lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
             
             <!-- Starter Plan -->
@@ -502,8 +502,8 @@
 </section>
 
 <!-- Features Comparison -->
-<section class="py-20">
-    <div class="container mx-auto px-6">
+<section class="py-16 md:py-24">
+    <div class="container mx-auto px-4 sm:px-6">
         <div class="text-center mb-12">
             <h2 class="text-4xl font-montserrat font-bold text-white mb-4">
                 Everything You Need to <span class="text-gradient">Succeed Online</span>
@@ -591,8 +591,8 @@
 </section>
 
 <!-- Testimonials -->
-<section class="py-20">
-    <div class="container mx-auto px-6">
+<section class="py-16 md:py-24">
+    <div class="container mx-auto px-4 sm:px-6">
         <div class="text-center mb-12">
             <h2 class="text-4xl font-montserrat font-bold text-white mb-4">
                 Trusted by <span class="text-gradient">500+ Businesses</span>
@@ -664,8 +664,8 @@
 </section>
 
 <!-- FAQ Section -->
-<section class="py-20">
-    <div class="container mx-auto px-6">
+<section class="py-16 md:py-24">
+    <div class="container mx-auto px-4 sm:px-6">
         <div class="text-center mb-12">
             <h2 class="text-4xl font-montserrat font-bold text-white mb-4">
                 Frequently Asked <span class="text-gradient">Questions</span>
@@ -717,8 +717,8 @@
 </section>
 
 <!-- CTA Section -->
-<section class="py-20">
-    <div class="container mx-auto px-6">
+<section class="py-16 md:py-24">
+    <div class="container mx-auto px-4 sm:px-6">
         <div class="modern-card p-12 text-center max-w-4xl mx-auto relative overflow-hidden">
             <!-- Background decoration -->
             <div class="absolute top-0 right-0 w-64 h-64 bg-gradient-to-br from-[var(--accent-cyan)] to-[var(--accent-blue)] opacity-10 rounded-full filter blur-3xl"></div>
